deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: secure-kubernetes
  labels:
    app: secure-kubernetes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: secure-kubernetes
  template:
    metadata:
      labels:
        app: secure-kubernetes
    spec:
      containers:
      - name: secure-kubernetes
        image: secure-kubernetes:latest
        ports:
        - containerPort: 8080
